V0.5
---------
 * Added optional inactive sub-states. The default theme doesn't use them.

V0.4.1
---------
 * Corrected slider position and groove.
 * No redundant arrow on toolbuttons.
 * Force the tooltip (normal) text color.
 * Set the group-box title color.
 * Draw a more elegant rubber band.
 * Added the possibility to set the slider thickness and also the length and thickness of slider handles.
 * Skip ugly frames.
 * No frame for a line-edit inside a view-item whose text is being edited.

V0.4
---------
 * Added the possibility to set the normal, focused and pressed text colors for non-editable widgets. If no (valid) color is set, the color scheme will be used.
 * Added the possibility to set the size of radio buttons and checkboxes without making those on menuitems bigger than usual.
 * Fixed a miscalculation in getting the horizontal scrollbar groove from the vertical one.
 * Set the widths of opposite frames of tool buttons equal to each other when there's only text in them.
 * Fixed instant and delayed popup arrows of tool buttons.
 * Considered the top and bottom frames of line-edits inside editable combos.
 * Corrected the interior of line-edits inside spinboxes.
 * Corrected the width of menu items when they have no icons.
 * Ignore the text margins in getting the rectangle of a (button) label when it's just an icon.
 * Put the contents of tab widgets inside their frames.
 * Fixed labels of vertical progressbars with thick frames.

V0.3.1
---------
 * Adjust the splitter indicator to fit in the handle when the latter is too thin.
 * Get the text shadow color as a string.
 * Minor fixes.

V0.3
---------
 * Added the possibility to raise and group neighbor toolbar (tool) buttons.
 * Translucent tooltips with shadow and rounded corners when compositing is available and enabled.

V0.2.2
---------
 * Don't enable compositing for torn-off menus.
 * Excluded "Qt-subapplication" from compositing. So far, only VirtualBox has introduced itself in that way.