@@ -2,9 +2,9 @@ ABOUT:
 
 Kvantum (by Pedram Pourang, aka. Tsu Jan <tsujan2000@gmail.com>) is an SVG-based theme engine for Qt4 and KDE4.
 
-Kvantum is a fork of QuantumStyle. The author of QuantumStyle, Saïd LANKRI, continued his work as QSvgSyle (https://github.com/DexterMagnific/QSvgStyle) but, apparently, he and I went in different directions; hence the forking. I made lots of fixes, changes and additions, reduced the memory footprint as far as possible, and tried to pay special attention to usability, practicality and elegance.
+Kvantum started as a fork of QuantumStyle, which is not developed anymore but whose author, Saïd LANKRI, continued his work as QSvgSyle (https://github.com/DexterMagnific/QSvgStyle). However, apart from the basic logic behind them, they are very different creatures now. I made lots of fixes, changes and additions, reduced the memory footprint as far as possible, added features, and tried to pay special attention to usability, practicality and elegance.
 
-Kvantum has a default dark theme, which should be used alongside the KDE/Qt4 color scheme included in the source and is inspired by the default theme of Enlightenment. Creation of such a theme for KDE was my main reason to make Kvantum but you could make your own themes for it with Inkscape; Kvantum will let you control almost every aspect of Qt widgets.
+Kvantum has a default dark theme, which should be used alongside the KDE/Qt4 color scheme included in the source and is inspired by the default theme of Enlightenment. Creation of such a theme for KDE was my main reason to make Kvantum but it goes far beyond its default theme: you could make your own themes for it with Inkscape and Kvantum will let you control almost every aspect of Qt widgets.
 
 Please see INSTALL for instructions on compilation and installation!
 
