@@ -1,6 +1,7 @@
 V0.5
 ---------
  * Added optional inactive sub-states. The default theme doesn't use them.
+ * Respect the toolbar text color with auto-raised buttons.
 
 V0.4.1
 ---------
